--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -7,11 +7,11 @@
     android:background="@color/darkGrey">
 
     <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="322dp"
+        android:id="@+id/intakeSourceRadioGroup"
+        android:layout_width="250dp"
         android:layout_height="220dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="225dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -56,17 +56,101 @@
             android:textSize="30sp" />
     </RadioGroup>
 
+    <RadioGroup
+        android:id="@+id/intakeTypeRadioGroup"
+        android:layout_width="250dp"
+        android:layout_height="220dp"
+        android:layout_marginTop="225dp"
+        android:layout_marginEnd="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/intakeTypeTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/yellow"
+            android:gravity="center"
+            android:text="Type of intake:"
+            android:textColor="@color/white"
+            android:textSize="36sp" />
+
+        <RadioButton
+            android:id="@+id/overRadioButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/grey"
+            android:buttonTint="@color/yellow"
+            android:text="Over the Bumper"
+            android:textColor="@color/white"
+            android:textSize="33sp" />
+
+        <RadioButton
+            android:id="@+id/underRadioButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/grey"
+            android:buttonTint="@color/yellow"
+            android:text="Under the Bumper"
+            android:textColor="@color/white"
+            android:textSize="33sp" />
+    </RadioGroup>
+
     <Button
         android:id="@+id/mainNextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
         android:backgroundTint="@color/yellow"
         android:onClick="toAuto"
         android:text="Next"
         android:textColor="@color/white"
         android:textSize="48sp"
-        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/radioGroup"
-        app:layout_constraintTop_toTopOf="@+id/radioGroup" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/teleBackButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="50dp"
+        android:backgroundTint="@color/yellow"
+        android:onClick="backAuto"
+        android:text="Back"
+        android:textColor="@color/white"
+        android:textSize="48sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/intakeTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
+        android:background="@color/yellow"
+        android:gravity="center"
+        android:text="Intake"
+        android:textColor="@color/white"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/shooterTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="400dp"
+        android:background="@color/yellow"
+        android:gravity="center"
+        android:text="Shooter"
+        android:textColor="@color/white"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
