--- a/app/src/main/res/layout/activity_after.xml
+++ b/app/src/main/res/layout/activity_after.xml
@@ -7,13 +7,13 @@
     android:background="@color/darkGrey">
 
     <Button
-        android:id="@+id/mainNextButton"
+        android:id="@+id/afterNextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
         android:backgroundTint="@color/yellow"
-        android:onClick="toAuto"
+        android:onClick="toMain"
         android:text="Next"
         android:textColor="@color/white"
         android:textSize="48sp"
@@ -21,13 +21,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/teleBackButton"
+        android:id="@+id/afterBackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="50dp"
         android:backgroundTint="@color/yellow"
-        android:onClick="backAuto"
+        android:onClick="backEnd"
         android:text="Back"
         android:textColor="@color/white"
         android:textSize="48sp"
@@ -96,4 +96,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gpEditText" />
+
+    <TextView
+        android:id="@+id/warningTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="500dp"
+        android:gravity="center"
+        android:text="YOU CANNOT GO BACK AFTER HITTING NEXT!!!"
+        android:textColor="@color/white"
+        android:textSize="48sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
