--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
         android:id="@+id/mainNextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="toAuto"
+        android:onClick="toMatch"
         android:text="NEXT"
         android:textColor="@color/white"
         android:backgroundTint="@color/yellow"
