--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -97,13 +97,13 @@
     </RadioGroup>
 
     <Button
-        android:id="@+id/mainNextButton"
+        android:id="@+id/matchNextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
         android:backgroundTint="@color/yellow"
-        android:onClick="toAuto"
+        android:onClick="toEnd"
         android:text="Next"
         android:textColor="@color/white"
         android:textSize="48sp"
@@ -111,13 +111,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/teleBackButton"
+        android:id="@+id/matchBackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="50dp"
         android:backgroundTint="@color/yellow"
-        android:onClick="backAuto"
+        android:onClick="backMain"
         android:text="Back"
         android:textColor="@color/white"
         android:textSize="48sp"
