--- a/app/src/main/res/layout/activity_after.xml
+++ b/app/src/main/res/layout/activity_after.xml
@@ -57,7 +57,7 @@
         android:background="@color/grey"
         android:ems="10"
         android:hint="Bumper quality? (1-10)"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="34sp"
@@ -73,7 +73,7 @@
         android:background="@color/grey"
         android:ems="10"
         android:hint="Gracious Professionalism? (1-10)"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="34sp"
@@ -89,7 +89,7 @@
         android:background="@color/grey"
         android:ems="10"
         android:hint="Comments"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="34sp"
