--- a/app/src/main/res/layout/activity_end.xml
+++ b/app/src/main/res/layout/activity_end.xml
@@ -85,7 +85,7 @@
         android:background="@color/grey"
         android:ems="10"
         android:hint="How long does it take you to climb?"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="34sp"
@@ -101,7 +101,7 @@
         android:background="@color/grey"
         android:ems="10"
         android:hint="Where can you climb on the chain?"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="34sp"
@@ -132,7 +132,7 @@
         android:background="@color/grey"
         android:ems="10"
         android:hint="Do you switch out your drive team?"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="34sp"
@@ -148,7 +148,7 @@
         android:background="@color/grey"
         android:ems="10"
         android:hint="What is your robot best at?"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="34sp"
@@ -164,7 +164,7 @@
         android:background="@color/grey"
         android:ems="10"
         android:hint="Can we take a picture?"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="34sp"
