--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
         android:background="@color/grey"
         android:ems="10"
         android:hint="Team Name"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="34sp"
@@ -93,7 +93,7 @@
         android:background="@color/grey"
         android:ems="10"
         android:hint="What are your robot's dimensions?"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="34sp"
@@ -109,7 +109,7 @@
         android:background="@color/grey"
         android:ems="10"
         android:hint="How much does your robot weigh?"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="34sp"
@@ -125,7 +125,7 @@
         android:background="@color/grey"
         android:ems="10"
         android:hint="What type of drivetrain do you use?"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="34sp"
@@ -141,7 +141,7 @@
         android:background="@color/grey"
         android:ems="10"
         android:hint="What coding language do you use?"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="34sp"
@@ -157,7 +157,7 @@
         android:background="@color/grey"
         android:ems="10"
         android:hint="Do you have any vision tracking?"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="34sp"
@@ -173,7 +173,7 @@
         android:background="@color/grey"
         android:ems="10"
         android:hint="What autos do you have?"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="34sp"
