--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -204,7 +204,7 @@
         android:background="@color/grey"
         android:ems="10"
         android:hint="What is your shooting mechanism?"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="34sp"
@@ -213,14 +213,14 @@
         app:layout_constraintTop_toBottomOf="@+id/speakerCheckBox" />
 
     <EditText
-        android:id="@+id/shootingPositionEditText"
+        android:id="@+id/shootingLocationEditText"
         android:layout_width="550dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:background="@color/grey"
         android:ems="10"
         android:hint="Where can you shoot from?"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="34sp"
